--- a/public/assets/css/colors/orange.css
+++ b/public/assets/css/colors/orange.css
@@ -60,7 +60,7 @@ span.overlay,
 a.btn-fullwidth,
 .de_testi.opt-3 blockquote:before
 {
-	background-color:#ffa854 ;
+	background-color:#54d3ff ;
 }
 
 .feature-box i,
@@ -118,7 +118,7 @@ h2.hs1 span,
 .countdown-s4 .countdown-period,
 .pricing-s1 .bottom ul li i
 {
-	color:#ffa854;
+	color:#54d3ff;
 }
 
 .feature-box i,
@@ -142,7 +142,7 @@ h2.hs1 span,
 .de_tab.tab_style_4 .de_nav
 {
 
-	border-color:#ffa854 ;
+	border-color:#54d3ff;
 }
 
 .box-fx .inner,
@@ -159,11 +159,11 @@ h2.hs1 span,
 .text-light .separator span:after ,
 .form-underline input[type=text]:focus, .form-underline textarea:focus, .form-underline input[type=email]:focus, .form-underline select:focus
 {
-	border-bottom-color:#ffa854 ;
+	border-bottom-color:#54d3ff ;
 }
 
 .preloader1{
-	border-top-color:#ffa854 ;
+	border-top-color:#54d3ff ;
 }
 
 
