--- a/public/assets/css/colors/gradient-1.css
+++ b/public/assets/css/colors/gradient-1.css
@@ -1,14 +1,14 @@
 .overlay-gradient {
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8849e3+0,4991e3+100&0.5+0,0.5+100 */
-background: -moz-linear-gradient(45deg, rgba(136,73,227,0.9) 0%, rgba(73,145,227,0.9) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(45deg, rgba(136,73,227,0.9) 0%,rgba(73,145,227,0.9) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(45deg, rgba(136,73,227,0.9) 0%,rgba(73,145,227,0.9) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+background: -moz-linear-gradient(45deg, rgba(15, 1, 95, 0.9) 0%, rgba(29, 3, 177, 0.9) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(45deg, rgba(29, 2, 124, 0.9) 0%,rgba(4, 58, 121, 0.9) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(45deg, rgba(44, 8, 143, 0.9) 0%,rgba(8, 90, 184, 0.9) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#808849e3', endColorstr='#804991e3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 .pricing-s1 .inner{
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8849e3+0,4991e3+100&0.5+0,0.5+100 */
-background: -moz-linear-gradient(45deg, rgba(136,73,227,0.9) 0%, rgba(73,145,227,0.9) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(45deg, rgba(136,73,227,0.9) 0%,rgba(73,145,227,0.9) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(45deg, rgba(136,73,227,0.9) 0%,rgba(73,145,227,0.9) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+background: -moz-linear-gradient(45deg, rgba(9, 21, 187, 0.9) 0%, rgba(73,145,227,0.9) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(45deg, rgba(7, 27, 202, 0.9) 0%,rgba(73,145,227,0.9) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(45deg, rgba(16, 9, 112, 0.9) 0%,rgba(73,145,227,0.9) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#808849e3', endColorstr='#804991e3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
