--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1146,9 +1146,9 @@ header.header-light .logo-2{
 	background: none;
 	height: auto;
 }
-#contact_form input[placeholder], #contact_form textarea[placeholder] {
+/* #contact_form input[placeholder], #contact_form textarea[placeholder] {
 	color: #eee;
-}
+} */
 #contact_form textarea {
 	height: 165px;
 }
@@ -2905,9 +2905,10 @@ span.teaser {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	background: url(../images/logo/logo_ISAMM.png) center no-repeat #222222 !important;
 	text-align: center;
 }
-.preloader1 {
+/* .preloader1 {
 	width: 60px;
 	height: 60px;
 	display: inline-block;
@@ -2923,7 +2924,7 @@ span.teaser {
 	position:absolute;
 	margin-left:-30px;
 	top:45%;
-}
+} */
 @keyframes preloader1 {
 	from {
 		transform: rotate(0deg);
