--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -31,10 +31,8 @@
                                 <li><a href="#section-about">About</a></li>
                                 <li><a href="#section-speakers">Speakers</a></li>
                                 <li><a href="#section-schedules">Schedules</a></li>
-                             
                                 <li><a href="#section-register">Register</a></li>								
-								<li><a href="#section-gallery">Gallery</a></li>
-                                <li><a href="#section-sponsors">Sponsors</a></li>
+                                {# <li><a href="#section-sponsors">Sponsors</a></li> #}
                             </ul>
                         </nav>
 
@@ -76,7 +74,7 @@
                                     <div class="spacer-double sm-hide"></div>
                                     <h1 class="big">Games and Emerging Technologies <br>GE↑ 2021.</h1>
                                     <div class="spacer-single"></div>
-                                    <div class="subtitle s2"><span><i class="fa fa-calendar-o white"></i>November 28th to 2nd, 2021</span><span><i class="fa fa-map-marker white"></i>Google Meet</span></div>
+                                    <div class="subtitle s2"><span><i class="fa fa-calendar-o white"></i>November 29th to 2nd, 2021</span><span><i class="fa fa-map-marker white"></i>Online</span></div>
                                 </div>
 
                                 <div class="col-md-6 text-center">
@@ -104,15 +102,15 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <h2 class="wow fadeInUp">Concernant notre conférence</h2>
+                            <h2 class="wow fadeInUp">About</h2>
                             <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
                         </div>
                         <div class="col-md-6 col-md-offset-3 text-center">
-                            <p class="lead wow fadeInUp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta. </p>
+                            <p class="lead wow fadeInUp">La conférence GET2021 est le premier événement international interdisciplinaire  en ligne organisé par l’institut supérieur des arts multimédias de la Manouba (ISAMM) totalement dédié aux technologies émergentes dans le domaine du développement de jeux vidéo.</p>
                             <div class="spacer-single"></div>
                         </div>
 
-                        <div class="col-md-4 text-center wow fadeInLeft">
+                        {# <div class="col-md-4 text-center wow fadeInLeft">
                             <div class="padding20 sm-mb30">
                                 <i class="icon-profile-male mb20 size70 blue"></i>
                                 <h3>Ask The Experts</h3>
@@ -134,7 +132,7 @@
                                 <h3>Workshops</h3>
                                 <p>There are many hotels available around the event location for temporary residence as long as you follow this event, from motels to 5 stars.</p>
                             </div>
-                        </div>
+                        </div> #}
 
                     </div>
                 </div>
@@ -186,24 +184,21 @@
                             <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
                         </div>
                         <div class="col-md-6 col-md-offset-3 text-center">
-                            <p class="lead wow fadeInUp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+                            {# <p class="lead wow fadeInUp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p> #}
                             <div class="spacer-single"></div>
                         </div>
 
                         <div class="clearfix"></div>
-
-                        <div class="col-md-3 wow fadeIn">
+                        
+                        <div class="col-md-3 mt-2 wow fadeIn">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
                                     <a class="simple-ajax-popup" href="team-details-1.html">
                                         <span class="filter"></span>
                                     </a>
-                                    <img src="{{asset('assets/images/team/1.jpg')}}" class="img-responsive" alt="">
+                                    <img src="{{asset('assets/images/participant/Fernando De La Cruz.jpg')}}" class="img-responsive" alt="">
                                 </figure>
-
-                                <h3>Jack Williams</h3>
-                                <span class="subtitle">Founder & CEO</span>
-
+                                <h3>Fernando De La Cruz</h3>
                             </div>
                         </div>
 
@@ -213,13 +208,12 @@
                                     <a class="simple-ajax-popup" href="team-details-2.html">
                                         <span class="filter"></span>
                                     </a>
-                                    <img src="{{asset('assets/images/team/2.jpg')}}" class="img-responsive" alt="">
+                                    <img src="{{asset('assets/images/participant/Georgios_N._Yannakakis.jpg')}}" class="img-responsive" alt="">
                                 </figure>
-
-                                <h3>Rose Shipp</h3>
-                                <span class="subtitle">Founder & CEO</span>
+                                <h3>Georgios N. Yannakakis</h3>
                             </div>
                         </div>
+                        
 
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".4s">
                             <div class="profile_pic text-center sm-mb30">
@@ -227,13 +221,12 @@
                                     <a class="simple-ajax-popup" href="team-details-3.html">
                                         <span class="filter"></span>
                                     </a>
-                                    <img src="{{asset('assets/images/team/3.jpg')}}" class="img-responsive" alt="">
+                                    <img src="{{asset('assets/images/participant/gundolf-500x500.png')}}" class="img-responsive" alt="">
                                 </figure>
-
-                                <h3>Sophie Lane</h3>
-                                <span class="subtitle">Founder & CEO</span>
+                                <h3>Gundolf S. Freyermuth</h3>
                             </div>
                         </div>
+                        
 
                         <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
@@ -241,11 +234,46 @@
                                     <a class="simple-ajax-popup" href="team-details-4.html">
                                         <span class="filter"></span>
                                     </a>
-                                    <img src="{{asset('assets/images/team/4.jpg')}}" class="img-responsive" alt="">
+                                    <img src="{{asset('assets/images/participant/Haifa Maamar.JPG')}}" class="img-responsive" alt="">
+                                </figure>
+                                <h3>Haifa Maamar</h3>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <a class="simple-ajax-popup" href="team-details-5.html">
+                                        <span class="filter"></span>
+                                    </a>
+                                    <img src="{{asset('assets/images/participant/Rebecca Leis.png')}}" class="img-responsive" alt="">
+                                </figure>
+                                <h3>Rebecca Leis</h3>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <a class="simple-ajax-popup" href="team-details-6.html">
+                                        <span class="filter"></span>
+                                    </a>
+                                    <img src="{{asset('assets/images/participant/NEW-Kat Schrier.jpg')}}" class="img-responsive" alt="">
+                                </figure>
+                                <h3>Kat Schrier</h3>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <a class="simple-ajax-popup" href="team-details-7.html">
+                                        <span class="filter"></span>
+                                    </a>
+                                    <img src="{{asset('assets/images/participant/Curtis L Maughan.jpg')}}" class="img-responsive" alt="">
                                 </figure>
 
-                                <h3>Evan Stone</h3>
-                                <span class="subtitle">Founder & CEO</span>
+                                <h3>Curtis L Maughan</h3>
                             </div>
                         </div>
 
@@ -635,8 +663,8 @@
                                 <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
                             </div>
                             <div class="col-md-6 col-md-offset-3 text-center">
-                                <p class="lead wow fadeInUp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
-                                <div class="spacer-single"></div>
+                                {# <p class="lead wow fadeInUp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+                                <div class="spacer-single"></div> #}
                             </div>
                         </div>
 
@@ -687,7 +715,7 @@
 
                         <div class="spacer-double"></div>
 
-                        <div class="row text-center">
+                        {# <div class="row text-center">
                             <div class="col-md-4">
                                 <div class="wm-1"></div>
                                 <i class="icon-map id-color size40 mb20"></i>
@@ -709,110 +737,16 @@
                                 <h5>Email Us</h5>
                                 <h4>contact@isamm.com</h4>
                             </div>
-                        </div>
+                        </div> #}
 
                     </div>
                 </div>
 
             </section>
             <!-- section close -->
-
+            
             <!-- section begin -->
-            <section id="section-gallery">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <h2 class="wow fadeInUp">Gallery</h2>
-                            <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
-                        </div>
-                        <div class="col-md-6 col-md-offset-3 text-center">
-                            <p class="lead wow fadeInUp">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
-                            <div class="spacer-single"></div>
-                        </div>
-
-                        <div class="clearfix"></div>
-
-                        <div id="owl-gallery" class="owl-carousel wow fadeInUp">
-                            <div class="gallery-item text-center">
-                                <figure class="picframe s2 mb30">
-                                    <a class="image-popup" href="images/gallery/1.jpg">
-                                        <span class="filter"></span>
-                                    </a>
-                                    <img src="{{asset('assets/images/gallery/1.jpg')}}" class="img-responsive" alt="">
-                                </figure>
-                            </div>
-
-                            <div class="gallery-item text-center">
-                                <figure class="picframe s2 mb30">
-                                    <a class="image-popup" href="images/gallery/2.jpg">
-                                        <span class="filter"></span>
-                                    </a>
-                                    <img src="{{asset('assets/images/gallery/2.jpg')}}" class="img-responsive" alt="">
-                                </figure>
-                            </div>
-
-                            <div class="gallery-item text-center">
-                                <figure class="picframe s2 mb30">
-                                    <a class="image-popup" href="images/gallery/3.jpg">
-                                        <span class="filter"></span>
-                                    </a>
-                                    <img src="{{asset('assets/images/gallery/3.jpg')}}" class="img-responsive" alt="">
-                                </figure>
-                            </div>
-
-                            <div class="gallery-item text-center">
-                                <figure class="picframe s2 mb30">
-                                    <a class="image-popup" href="images/gallery/4.jpg">
-                                        <span class="filter"></span>
-                                    </a>
-                                    <img src="{{asset('assets/images/gallery/4.jpg')}}" class="img-responsive" alt="">
-                                </figure>
-                            </div>
-
-                            <div class="gallery-item text-center">
-                                <figure class="picframe s2 mb30">
-                                    <a class="image-popup" href="images/gallery/5.jpg">
-                                        <span class="filter"></span>
-                                    </a>
-                                    <img src="{{asset('assets/images/gallery/5.jpg')}}" class="img-responsive" alt="">
-                                </figure>
-                            </div>
-
-                            <div class="gallery-item text-center">
-                                <figure class="picframe s2 mb30">
-                                    <a class="image-popup" href="images/gallery/6.jpg">
-                                        <span class="filter"></span>
-                                    </a>
-                                    <img src="{{asset('assets/images/gallery/6.jpg')}}" class="img-responsive" alt="">
-                                </figure>
-                            </div>
-
-                            <div class="gallery-item text-center">
-                                <figure class="picframe s2 mb30">
-                                    <a class="image-popup" href="images/gallery/7.jpg">
-                                        <span class="filter"></span>
-                                    </a>
-                                    <img src="{{asset('assets/images/gallery/7.jpg')}}" class="img-responsive" alt="">
-                                </figure>
-                            </div>
-
-                            <div class="gallery-item text-center">
-                                <figure class="picframe s2 mb30">
-                                    <a class="image-popup" href="images/gallery/8.jpg">
-                                        <span class="filter"></span>
-                                    </a>
-                                    <img src="{{asset('assets/images/gallery/8.jpg')}}" class="img-responsive" alt="">
-                                </figure>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </section>
-            <!-- section close -->
-
-            <!-- section begin -->
-            <section id="section-sponsors" class="no-top no-bottom text-light" data-stellar-background-ratio=".2">
+            {# <section id="section-sponsors" class="no-top no-bottom text-light" data-stellar-background-ratio=".2">
                 <div class="overlay-gradient pt80 pb80">
                     <div class="container relative">
                         <div class="row">
@@ -843,7 +777,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> #}
             <!-- section close -->
 
         </div>
@@ -854,15 +788,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 sm-text-center sm-mb10">
-                        <div class="mt10">&copy; Copyright 2019 - Invitex by Designesia </div>
+                        {# <div class="mt10">&copy; Copyright</div> #}
                     </div>
 
                     <div class="col-md-6 text-right sm-text-center">
                         <div class="social-icons">
                             <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
                             <a href="#"><i class="fa fa-linkedin fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
                             <a href="#"><i class="fa fa-rss fa-lg"></i></a>
                         </div>
                     </div>
@@ -879,7 +811,6 @@
 		
 		<div id="floating-icon" class="sm-hide">
 			<a href="#section-register" class="scroll-to bg-orange"><i class="fa fa-pencil"></i> Register</a>
-			<span class="scroll-to bg-pink"><i class="fa fa-phone"></i> +1 650 329 2000</span>
 		</div>
 
     </div>
