--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4240,6 +4240,7 @@ video, object {
 }
 .img-responsive {
 	display: inline-block;
+	width: 100%;
 }
 .img-shadow {
 	-webkit-box-shadow: 8px 8px 40px 0px rgba(0, 0, 0, 0.3);
@@ -6205,7 +6206,7 @@ a.read_more i {
 	display: inline-block;
 }
 .profile_pic h3 {
-	margin-bottom: 0px;
+	margin-bottom: 10%;
 }
 .profile_pic .subtitle {
 	font-size: 13px;
@@ -7575,8 +7576,7 @@ a, img {
 		font-size:12px;
 		padding-top:0px;
 		
-	}
-	
+	}	
 	
 }
 
